src/tui/snapshots/inara__tui__hud__tests__snapshot_enum_column.snap
---
source: src/tui/hud.rs
expression: lines_to_text(&column_hud_lines(&hud))
---
  job_status  ·  enum-ish
  filled: 100%
  enum: 5 values
  draft · queued · running · failed · complete
  ─────
  p  profile — exact counts
