src/tui/snapshots/inara__tui__hud__tests__snapshot_unanalyzed_column.snap
---
source: src/tui/hud.rs
expression: lines_to_text(&column_hud_lines(&hud))
---
  text
  ⚠ no statistics — column not analyzed
  a  analyze — collect statistics
  ─────
  p  profile — exact counts
